kubernetes/apps/flux-system/webhooks/app/github/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik-ext.damacus.io"
spec:
  hostnames: ["flux-webhook.damacus.io"]
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
